# bookstore

./: README.md  etapas.txt  pyproject.toml
bookstore/: settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
product/: admin.py  factories.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  product.py
product/serializers/: product_serializer.py
product/tests/test_serializer/: test_category_serializer.py
product/tests/test_serializers/: test_product_serializer
product/tests/test_viewsets/: test_category_viewset.py
product/viewsets/: product_viewset.py
